crates/bevy_naga_oil/src/compose/tests/expected/conditional_missing_import_nested.txt
error: required import 'b' not found
  ┌─ tests/conditional_import_fail/top_nested.wgsl:1:1
  │
1 │ #import middle
  │ ^
  │
  = missing import 'b'

